<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <!-- POM file generated with GWT webAppCreator -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.stanford.protege</groupId>
    <artifactId>webprotege</artifactId>
    <packaging>war</packaging>
    <version>2.5-SNAPSHOT</version>
    <name>GWT Maven Archetype</name>

    <properties>
        <gwtVersion>2.5.1</gwtVersion>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gwt.test.mode>htmlunit</gwt.test.mode>
        <!-- Properties common to all build profiles -->
        <application.name>WebProtege</application.name>
    </properties>

    <repositories>
        <repository>
            <id>oss-sonatype</id>
            <name>OSS Sonatype Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>edu.protege.stanford</id>
            <name>Protege Project Maven Repo</name>
            <url>https://github.com/protegeproject/mvn-repo/raw/master/releases</url>
            <snapshots>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwtVersion}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>16.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-gwt</artifactId>
            <version>15.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.guice</groupId>
            <artifactId>guice</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>net.tanesha.recaptcha4j</groupId>
            <artifactId>recaptcha4j</artifactId>
            <version>0.0.7</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.3</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2</version>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.owlapi</groupId>
            <artifactId>owlapi-distribution</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.owlapi</groupId>
            <artifactId>owlapi-gwt</artifactId>
            <version>3.4.9</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.owlapi</groupId>
            <artifactId>binaryowl</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.protege</groupId>
            <artifactId>protege-owlapi-extensions</artifactId>
            <version>3.2.4</version>
        </dependency>

        <dependency>
            <groupId>org.protege</groupId>
            <artifactId>protege-editor-owl</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.protege</groupId>
            <artifactId>protege-editor-core-application</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.protege</groupId>
            <artifactId>protege</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.protege</groupId>
            <artifactId>bioportal-services-lib</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.protege</groupId>
            <artifactId>notes-api</artifactId>
            <version>2.0.0</version>
        </dependency>

        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mailapi</artifactId>
            <version>1.4.3</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.protege</groupId>
            <artifactId>codemirror-gwt</artifactId>
            <version>1.0.0</version>
        </dependency>


        <dependency>
            <groupId>org.commonjava.googlecode.markdown4j</groupId>
            <artifactId>markdown4j</artifactId>
            <version>2.2-cj-1.0</version>
        </dependency>

        <dependency>
            <groupId>com.gwt-ext</groupId>
            <artifactId>gwt-ext</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwt-crypto</groupId>
            <artifactId>gwt-crypto</artifactId>
            <version>2.3.0</version>
        </dependency>


        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <classifier>sources</classifier>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.3</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-mongodb</artifactId>
            <version>1.3.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>3.1</version>
        </dependency>

        <!--
            openid4java includes some funky dependencies that break compilation and GWT test cases so
            we need to exclude them.
            nekohtml - doesn't specify a version, but the resolved version is too old and GWT test cases rely on a
            newer version
            guice - a non-standard guice dependency is used.  We use the com.google.inject guice dep instead.
        -->
        <dependency>
            <groupId>org.openid4java</groupId>
            <artifactId>openid4java-consumer</artifactId>
            <version>0.9.6</version>
            <type>pom</type>
            <exclusions>
                <exclusion>
                    <groupId>net.sourceforge.nekohtml</groupId>
                    <artifactId>nekohtml</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.code.guice</groupId>
                    <artifactId>guice</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit-dep</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- Generate compiled stuff in the folder used for developing mode -->
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

        <plugins>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwtVersion}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                            <!--<goal>i18n</goal>-->
                            <goal>generateAsync</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <runTarget>WebProtege.html</runTarget>
                    <hostedWebapp>${webappDirectory}</hostedWebapp>
                    <extraJvmArgs>-Xms1000M -Xmx3000M -XX:MaxPermSize=500M -XX:PermSize=128M</extraJvmArgs>
                    <logLevel>ERROR</logLevel>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>exploded</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <webappDirectory>${webappDirectory}</webappDirectory>
                    <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
                    <webResources>
                        <resource>
                            <directory>src/main/configuration</directory>
                            <filtering>true</filtering>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>2.16</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.3.1</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireProperty>
                                    <property>data.directory</property>
                                    <message>"data.directory must be specified."</message>
                                </requireProperty>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
        </plugins>
    </reporting>


    <profiles>
        <!-- Profile for local development of WebProtege -->
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <data.directory>/data/webprotege</data.directory>
                <application.host>localhost</application.host>
                <!-- No admin email by default -->
                <admin.email/>
            </properties>
        </profile>
        <!-- Profile for producing a deployment on a particular machine -->
        <profile>
            <id>deployment</id>
            <properties>
                <data.directory>/data/webprotege</data.directory>
                <!-- No admin email by default -->
                <admin.email/>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>1.3.1</version>
                        <executions>
                            <execution>
                                <id>enforce-versions</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireProperty>
                                            <property>application.host</property>
                                            <message>"application.host must be specified."</message>
                                        </requireProperty>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- Profile for producing a release of WebProtege that people can download and install locally -->
        <profile>
            <id>webprotege.release</id>
            <properties>
                <data.directory>/data/webprotege</data.directory>
                <!-- No admin email by default -->
                <admin.email/>
            </properties>
        </profile>
        <!-- Profile for deployment of WebProtege to webprotege.stanford.edu -->
        <profile>
            <id>webprotege.stanford.edu</id>
            <properties>
                <application.host>webprotege.stanford.edu</application.host>
                <data.directory>/apps/bmir.apps/web-protege-data</data.directory>
                <mail.smtp.from.wp.personalName>WebProtege</mail.smtp.from.wp.personalName>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>1.3.1</version>
                        <executions>
                            <execution>
                                <id>enforce-versions</id>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireProperty>
                                            <property>admin.email</property>
                                            <message>"admin.email must be specified."</message>
                                        </requireProperty>
                                        <requireProperty>
                                            <property>mail.smtp.host</property>
                                            <message>"mail.smtp.host must be specified.</message>
                                        </requireProperty>
                                    </rules>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

</project>
